--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs --format esm --dts --clean",
     "dev": "tsup src/index.ts --format cjs --format esm --dts --watch",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.0.10",
+    "rimraf": "^6.0.1",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   },
